Updates for SCS 1.1.0

--- a/auto-simulator/src/main/resources/public/index.html
+++ b/auto-simulator/src/main/resources/public/index.html
@@ -73,7 +73,7 @@
 	</nav>  	
   	<div class="container" >
 		<div class="row main-content-row">
-			<div class="col-xs-6 vehicle-info-container">
+			<div class="col-xs-12 col-md-6 vehicle-info-container">
 			    <div class="map-container">
 				    <div id="map-canvas">
 				    </div>
